Revert "fix: Error style breaking on mobile devices" (#814)
Revert "fix: Error style breaking on mobile devices (#813)"

This reverts commit f6ab4848996131abe6de8e223c53d5f45dd1f328.

--- a/task-requests/style.css
+++ b/task-requests/style.css
@@ -362,18 +362,15 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
-  justify-items: center;
 }
 .taskRequest__message {
-  line-height: 1.2;
+  line-height: 1.25rem;
   font-weight: 600;
   text-align: center;
   font-size: 1.5rem;
   width: 100%;
   position: absolute;
-  word-wrap: break-word;
 }
-
 .taskRequest__message--error {
   color: var(--color-error);
   font-weight: 600;
@@ -484,10 +481,6 @@ body {
 
   .funnel-icon {
     margin: auto;
-  }
-
-  .taskRequest__message--error {
-    position: static;
   }
 }
 
